--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,16 +6,11 @@
     
 }
 
-
-
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: url(./../img/grills.jpg);
-    background-repeat: no-repeat;
     size: 100px;
 
 }
-
 
 .logo-wrap img{
    width: 80px;
@@ -23,12 +18,10 @@ body{
   
 }
 
-
 nav{
     display: flex;
     justify-content: space-between;
     padding: 10px 50px;
-    /* background-color: brown; */
     background: rgb(245, 235, 220);
     transition: 0.5s ease;
     align-items: center;
@@ -79,7 +72,7 @@ nav{
 
 .nav-items .nav-links:hover{
     background-color: white;
-    color: brown;
+    color: #5D1201;
    
     border-radius: 5px;
 }
